--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,5 +1,8 @@
 name: Android Build
-on: workflow_dispatch
+on: 
+	push:
+    branches: ['main']
+  workflow_dispatch:
 jobs:
   build:
     name: Android Build
