--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,8 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Pulling the new commit
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
+          token: ${{ serects.ACCESS_TOKEN }}
           submodules: ${{ env.BuildMods }}
       - name: Setting up Haxe
         uses: krdlab/setup-haxe@v1
